Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/Trigger_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Trigger configuration to run trigger classes</description>
    <label>TriggerConfiguration</label>
    <pluralLabel>TriggerConfiguration</pluralLabel>
</CustomObject>