Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class name to execute</description>
    <label>ClassName</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>