Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn ON and OFF trigger classes</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>