Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>Name of object for which you want to run this class</description>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>ObjectApiName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>