Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/Record_Types_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Types_API_Names__c</fullName>
    <description>Record types for which this class should execute</description>
    <label>RecordTypesAPINames</label>
    <type>TextArea</type>
</CustomField>