Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/Recursion_times__c.field-meta.xml
<CustomField>
    <fullName>Recursion_times__c</fullName>
    <defaultValue>ABS(1)</defaultValue>
    <label>Recursion_times</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>