Property Management System/force-app/main/default/objects/Trigger_Configuration__mdt/fields/UpdatedFields__c.field-meta.xml
<CustomField>
    <fullName>UpdatedFields__c</fullName>
    <label>UpdatedFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>